added server config

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 	},
 	"homepage": "https://demos.creative-tim.com/argon-dashboard-react/",
 	"scripts": {
-		"start": "react-scripts start",
+		"startz": "react-scripts start",
+		"start": "node server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
