--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"react-dom": "16.12.0",
 		"react-google-maps": "9.4.5",
 		"react-html-table-to-excel": "^2.0.0",
+		"react-js-pagination": "^3.0.3",
 		"react-loading-skeleton": "^2.1.1",
 		"react-router-dom": "5.1.2",
 		"react-scripts": "^3.4.1",
