--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "url": "https://github.com/creativetimofficial/argon-dashboard-react/issues"
   },
   "scripts": {
-    "startz": "react-scripts start",
-    "start": "node server.js",
+    "start": "react-scripts start",
+    "startz": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
