--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "url": "https://github.com/creativetimofficial/argon-dashboard-react/issues"
   },
   "scripts": {
-    "startz": "react-scripts start",
-    "start": "node server.js",
+    "start": "react-scripts start",
+    "startz": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -67,6 +67,7 @@
     "react-loading-skeleton": "^2.1.1",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
+    "react-toggle-button": "^2.2.0",
     "reactstrap": "8.4.1",
     "recompose": "^0.30.0"
   },
