--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash": "^4.17.19",
     "md5": "^2.3.0",
     "moment": "^2.27.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
     "parse": "^2.15.0",
@@ -61,6 +62,7 @@
     "react-copy-to-clipboard": "5.0.2",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
+    "react-geocode": "^0.2.1",
     "react-google-maps": "9.4.5",
     "react-html-table-to-excel": "^2.0.0",
     "react-js-pagination": "^3.0.3",
