--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "md5": "^2.3.0",
     "moment": "^2.27.0",
     "multiselect-react-dropdown": "^1.6.1",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "node-sass": "4.13.1",
     "nouislider": "14.1.1",
@@ -61,11 +62,13 @@
     "react": "16.12.0",
     "react-chartjs-2": "2.9.0",
     "react-copy-to-clipboard": "5.0.2",
+    "react-cron-jobs": "^1.0.6",
     "react-datetime": "2.16.3",
     "react-dom": "16.12.0",
     "react-geocode": "^0.2.1",
     "react-google-maps": "9.4.5",
     "react-html-table-to-excel": "^2.0.0",
+    "react-js-cron": "^1.2.0",
     "react-js-pagination": "^3.0.3",
     "react-loading-skeleton": "^2.1.1",
     "react-multi-select-component": "^3.0.5",
