fix white screen page

--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "emailjs-com": "^2.6.3",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "file-saver": "^2.0.5",
+    "js-xlsx": "^0.8.22",
+    "jszip": "^3.5.0",
     "lodash": "^4.17.19",
     "md5": "^2.3.0",
     "moment": "^2.27.0",
